
22.1.0
	Date: xx/xx/2020
	What's new
		1. (medium): new table agent in database
		2. (medium): update cli usage arguments
		3. (medium): remote agent provisionning is mandatory
	Issues Fixed
		1. (minor): xxxx