@@ -5,5 +5,6 @@
 		1. (medium): new table agent in database
 		2. (medium): update cli usage arguments
 		3. (medium): remote agent provisionning is mandatory
+		4. (minor): agent type no more mandatory
 	Issues Fixed
 		1. (minor): xxxx
